--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,7 +19,7 @@ scraper = "0.15.0"
 serde = { version = "1.0.156", features = ["derive"] }
 serde_json = "1.0.94"
 serde_qs = "0.12.0"
-sqlx = { version = "0.6.3", features = ["runtime-tokio-rustls", "postgres", "offline", "uuid", "time"] }
+sqlx = { version = "0.6.3", features = ["runtime-tokio-rustls", "postgres", "offline", "uuid", "time", "bigdecimal"] }
 strum = "0.24.1"
 strum_macros = "0.24.3"
 thiserror = "1.0.40"
@@ -32,3 +32,5 @@ tracing-subscriber = "0.3.16"
 fantoccini = "0.19.3"
 regex = "1.8.1"
 lazy_static = "1.4.0"
+reqwest = "0.11.17"
+uuid = { version = "1.4.1", features = ["v4"] }
