--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,7 +19,7 @@ scraper = { version = "0.19.0", features = ["atomic"] }
 serde = { version = "1.0.197", features = ["derive"] }
 serde_json = "1.0.115"
 serde_qs = "0.13.0"
-sqlx = { version = "0.7.4", features = ["runtime-tokio-rustls", "postgres", "uuid", "time"] }
+sqlx = { version = "0.7.4", features = ["runtime-tokio-rustls", "postgres", "uuid", "time", "chrono"] }
 strum = "0.26.2"
 strum_macros = "0.26.2"
 thiserror = "1.0.58"
@@ -34,3 +34,4 @@ regex = "1.10.4"
 lazy_static = "1.4.0"
 reqwest = "0.12.3"
 uuid = { version = "1.8.0", features = ["v4"] }
+chrono = "0.4.37"
