--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,8 +20,7 @@ serde = { version = "1.0.197", features = ["derive"] }
 serde_json = "1.0.115"
 serde_qs = "0.13.0"
 sqlx = { version = "0.7.4", features = ["runtime-tokio-rustls", "postgres", "uuid", "time", "chrono"] }
-strum = "0.26.2"
-strum_macros = "0.26.2"
+strum = { version = "0.26.2", features = ["derive"] }
 thiserror = "1.0.58"
 time = { version = "0.3.36", features = ["formatting"] }
 tokio = { version = "1.37.0", features = ["full"] }
