--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "scraper"
+name = "tcg-scraper"
 version = "0.1.0"
 edition = "2021"
 
@@ -31,6 +31,7 @@ tracing-subscriber = "0.3.18"
 fantoccini = "0.19.3"
 regex = "1.10.4"
 lazy_static = "1.4.0"
-reqwest = "0.12.3"
+reqwest = { version = "0.12.3", features = ["stream"] }
 uuid = { version = "1.8.0", features = ["v4"] }
 chrono = "0.4.37"
+google-cloud-storage = "0.17.0"
