--- a/Cargo.toml
+++ b/Cargo.toml
@@ -23,7 +23,7 @@ strum = { version = "0.26.2", features = ["derive"] }
 thiserror = "1.0.58"
 time = { version = "0.3.36", features = ["formatting"] }
 tokio = { version = "1.37.0", features = ["full"] }
-url = "2.5.0"
+url = { version = "2.5.0", features = ["serde"] }
 html-escape = "0.2.13"
 tracing = "0.1.40"
 tracing-subscriber = "0.3.18"
@@ -34,3 +34,6 @@ reqwest = { version = "0.12.3", features = ["stream"] }
 uuid = { version = "1.8.0", features = ["v4"] }
 chrono = "0.4.37"
 google-cloud-storage = "0.17.0"
+maud = { version = "0.26.0", features = ["axum"] }
+axum = "0.7.5"
+meilisearch-sdk = "0.25.0"
